--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
-<html lang="en" style="background-image: url(/static/images/mountainsCa.jpeg)">
+<html lang="en">
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>{%block title%}52 Weeks Journal{% endblock %}</title>
         <!-- Bootstrap CSS -->
-  <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous"> -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
+        <!-- JavaScript Bundle with Popper -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script> 
         <!-- Your custom styles -->
   <link rel="stylesheet" href="/static/style.css">
   <style>
@@ -14,61 +16,171 @@
   </style>
 </head>
 
+
+<!-- Button trigger modal Create User -->
+<div id="home_button_bar" class="row">
+  <div class="col-2 offset-8">
+    <button type="button" class="btn btn-dark" data-bs-toggle="modal" data-bs-target="#create-user">
+      Create Account
+    </button>
+  </div>
+
+<!-- Button modal Login -->
+  <div class="col-2">
+    <button type="button" class="btn btn-dark" data-bs-toggle="modal" data-bs-target="#user-login">
+      Log In
+    </button>
+  </div>
+</div>
+<div id="home_img_block" class="row">
+  <div class="col-10">
+  <div id="home_img" class="bg-image" style="background-image: url('/static/images/rupi.png')" ></div>
+</div>
+</div>
+
 <body>
+<h1 id="login_title_1">Growth Mindfulness</h1>
+<h2 id="login_title"></h2>
   
 
-  <h1 id="login_title"></h1>
+ <!-- Modal Create User -->
+<div class="modal fade" id="create-user" tabindex="-1" aria-labelledby="Create New Account" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel">Create New User Account</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+        <form id="create-user-form" action="/users" method="POST">
+            <div class="mb-2">
+              <label for="user_id" class="form-label">Email:</label>
+              <input type="text" name="email" class="form-control" id="user_id"/>
+            </div>
+            <div class="mb-2">
+              <label for="user_password" class="form-label">Password:</label>
+              <input type="text" name="password" class="form-control" id="user_password"/>
+            </div>
+            <div class="mb-2">
+              <label for="user_fname" class="form-label">First Name:</label>
+              <input type="text" name="fname" class="form-control" id="user_fname"/>
+            </div>
+            <div class="mb-2">
+              <label for="user_lname" class="form-label">Last Name:</label>
+              <input type="text" name="lname" class="form-control" id="user_lname"/>
+            </div>
+            <div class="row">
+              Would you like to be alerted via email when a new entry is released?
+              <div class="row">
+                <div class="col-8 col-sm-6">
+                  <input type="radio" name="twilio_alert" value="Yes" id="yes_twilio">
+                  <label for="yes_twilio">Yes</label>
+                </div>
+                <div class="col-4 col-sm-6">
+                  <input type="radio" name="twilio_alert" value="No" id="no_twilio">
+                  <label for="no_twilio">No</label>
+                </div>
+              </div>
+            </div>
+            <div class="row">
+              <div class="col-1 col-sm-6">
+                <button type="button" data-bs-dismiss="modal" class="btn btn-secondary" id="close_button">Close</button>
+              </div>
+              <div class="col-1 col-sm-6">
+                <button type="submit" data-bs-dismiss="modal" class="btn btn-primary" id="homepage_button">Create User!</button>
+              </div>  
+            </div>
+          </form>
+      </div>
+    </div>
+  </div>
+</div> 
+
+
+   <!-- Modal Login -->
+<div class="modal fade" id="user-login" tabindex="-1" aria-labelledby="User Log In" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel">Log In</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+        <form id="login-form" action="/login" method="POST">
+          <div class="mb-2">
+            <label for="user_id" class="form-label">Email:</label>
+            <input type="text" name="email" class="form-control" id="user_id" required/>
+          </div>
+          <div class="mb-2">
+            <label for="user_password" class="form-label">Password:</label>
+            <input type="text" name="password" class="form-control" id="user_password" required/>
+          </div>
+          <div class="row">
+            <div class="col-1 col-sm-6">
+              <button type="button" data-bs-dismiss="modal" class="btn btn-secondary" id="close_button">Close</button>
+            </div>
+            <div class="col-1 col-sm-6">
+              <button type="submit" data-bs-dismiss="modal" class="btn btn-primary" id="homepage_button">Log In!</button>
+            </div>  
+          </div>
+        </form>
+      </div>
+    </div>
+  </div>
+</div> 
+
+
+<!-- <form action="/users" method="POST">
+  <div>
+    <label for="user_id">Email:</label>
+    <input type="text" name="email"/>
+  </div>
+  <div>
+    <label for="user_password">Password:</label>
+    <input type="password" name="password"/>
+  </div>
+  <div>
+    <label for="fname">First Name:</label>
+    <input type="text" name="fname"/>
+  </div>
+  <div>
+    <label for="lname">Last Name:</label>
+    <input type="text" name="lname"/>
+  </div>
+  <div>
+    Would you like to be alerted via email when a new entry is released?
   
-  <h3><u>Log In</u></h3>
-  <form action="/login" method="POST">
-    <div>
-      <label for="user_id">Email:</label>
-      <input type="text" name="email" id="user_id" required />
-    </div>
-    <div>
-      <label for="user_password">Password:</label>
-      <input type="password" name="password" id="user_password" required />
-    </div>
-    <div>
-      <button id="homepage_button" type="submit">Log In!</button>
-   </div>
+    <input type="radio" name="twilio_alert" value="Yes" id="yes_twilio">
+    <label for="yes_twilio">Yes</label>
+  
+    <input type="radio" name="twilio_alert" value="No" id="no_twilio">
+    <label for="no_twilio">No</label>
   </form>
+  <div>
+    <button id="homepage_button" type="submit">Create User!</button>
+  </div>
+  <div>
+  
+  </div>
+</form> -->
 
 
-  <h3><u>Create an Account</u></h3>
-  <form action="/users" method="POST">
-    <div>
-      <label for="user_id">Email:</label>
-      <input type="text" name="email"/>
-    </div>
-    <div>
-      <label for="user_password">Password:</label>
-      <input type="password" name="password"/>
-    </div>
-    <div>
-      <label for="fname">First Name:</label>
-      <input type="text" name="fname"/>
-    </div>
-    <div>
-      <label for="lname">Last Name:</label>
-      <input type="text" name="lname"/>
-    </div>
-    <div>
-      Would you like to be alerted via email when a new entry is released?
-    
-      <input type="radio" name="twilio_alert" value="Yes" id="yes_twilio">
-      <label for="yes_twilio">Yes</label>
-    
-      <input type="radio" name="twilio_alert" value="No" id="no_twilio">
-      <label for="no_twilio">No</label>
-    </form>
-    <div>
-      <button id="homepage_button" type="submit">Create User!</button>
-    </div>
-    <div>
-    
-    </div>
-  </form>
+<!-- <h3><u>Log In</u></h3>
+<form action="/login" method="POST">
+  <div>
+    <label for="user_id">Email:</label>
+    <input type="text" name="email" id="user_id" required />
+  </div>
+  <div>
+    <label for="user_password">Password:</label>
+    <input type="password" name="password" id="user_password" required />
+  </div>
+  <div>
+    <button id="homepage_button" type="submit">Log In!</button>
+ </div>
+</form> -->
+
+
   <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script> -->
   <script src='/static/js/homepage.js'></script>
 </body>
