--- a/static/style.css
+++ b/static/style.css
@@ -67,11 +67,12 @@ h1, h2, p, #entry {
   text-align: center;
 }
 
-#login_title, #login_title_1 {
+#login_title, #login_title_1, .flash-msg{
 font-family: 'Fredericka the Great', cursive;
+color: white;
 }
 
-form, h3, .flash-msg, #journal_entry {
+form, h3, #journal_entry {
   color: black;
   font-weight: bolder;
   font-family: marker felt, fantasy;
@@ -114,6 +115,12 @@ form, h3, .flash-msg, #journal_entry {
   font-family: marker felt, fantasy;
 }
 
+.modal-content{
+  background-color:white;
+  border: none;
+  color: black;
+  font-family: marker felt, fantasy;
+}
 #homepage_button, #close_button {
   background-color: black;
   border: none;
