--- a/templates/base.html
+++ b/templates/base.html
@@ -8,24 +8,37 @@
         <link rel="icon" type="image/x-icon" href="/static/images/journal_icon.png">
         <!-- Bootstrap CSS -->
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
-                    <!-- JavaScript Bundle with Popper -->
-                    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
+        <!-- JavaScript Bundle with Popper -->
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
         <!-- Your custom styles -->
         <link rel="stylesheet" href="/static/style.css">
        
     </head>
+
+
     <body>
         <nav class="navbar">
             <div class="container-fluid">
-                <div class="d-inline-flex">  
-                    <a class="nav-link active" aria-current="page" href="/entry"><span><img src="/static/images/pen.png" alt="pen img" width=40px height=40px></span>My Entries</a>
-                    <a class="nav-link active" aria-current="page" href="/my-journal"><span><img src="/static/images/read.png" alt="book img" width=40px height=40px></span>Journal</a> 
-                    <a class="nav-link active" aria-current="page" href="/community"><span><img src="/static/images/community.png" alt="pen img" width=40px height=40px></span>Community</a>
+                <div class="row">
+                    {% block nav %}
+                    <div class="col-4">  
+                        <a class="nav-link active" aria-current="page" href="/entry"><span><img src="/static/images/pen.png" alt="pen img" width=40px height=40px></span>My Entries</a>
+                    </div>
+                    <div class="col-3">  
+                        <a class="nav-link active" aria-current="page" href="/my-journal"><span><img src="/static/images/read.png" alt="book img" width=40px height=40px></span>Journal</a> 
+                    </div>
+                    <div class="col-4">  
+                        <a class="nav-link active" aria-current="page" href="/community"><span><img src="/static/images/community.png" alt="pen img" width=40px height=40px></span>Community</a>
                     <!-- <a class="nav-link active" aria-current="page" href="/friends"><span><img src="/static/images/friends.png" alt="friends img" width=40px height=40px></span>Connections</a> -->
-                  </div>
-                  <a class="nav-link active" style="justify-content: end" href="/logout">Logout</a>
-             </div>
-         </nav>
+                    </div>
+                    <div class="col-1 text-right">  
+                        <a class="nav-link active" aria-current="page"  href="/logout">Logout</a>
+                    </div>
+                    {% endblock %}
+                </div>
+            </div>
+        </nav>
+        
               
                   <!-- <nav class="navbar">
                     <div class="container-fluid">
