--- a/templates/shared-user-page.html
+++ b/templates/shared-user-page.html
@@ -2,6 +2,22 @@
 
 {% block title %} {{user.fname}}'s Journal Entries {% endblock %}
 
+{% block nav %}
+    <div class="col-4">  
+        <a class="nav-link active" aria-current="page" href="/entry"><span><img src="/static/images/pen.png" alt="pen img" width=40px height=40px>My Entries</span></a>
+    </div>
+    <div class="col-3">  
+        <a class="nav-link active" aria-current="page" href="/my-journal"><span><img src="/static/images/read.png" alt="book img" width=40px height=40px>Journal</span></a> 
+    </div>
+    <div class="col-4">  
+        <a class="nav-link active" aria-current="page" href="/community"><span><img src="/static/images/community.png" alt="pen img" width=40px height=40px></span>Community</a>
+        <!-- <a class="nav-link active" aria-current="page" href="/friends"><span><img src="/static/images/friends.png" alt="friends img" width=40px height=40px></span>Connections</a> -->
+    </div>
+    <div class="col-1 text-right">  
+        <a class="nav-link active" aria-current="page" href="/logout">Logout</a>
+    </div>
+{% endblock %}
+
 {% block content %} 
 
 <h1>{{user.fname}}'s Journal </h1>
