--- a/templates/user-page.html
+++ b/templates/user-page.html
@@ -1,9 +1,19 @@
 {% extends 'base.html' %}
 
-{% block navbar %}
-    <span class="navbar-text">
-        <h1><u>{{user.fname}}'s Entries</u></h1>
-    </span>
+{% block nav %}
+    <div class="col-4">  
+        <a class="nav-link active" aria-current="page" href="/entry"><span style="color: maroon"><img src="/static/images/pen.png" alt="pen img" width=40px height=40px>My Entries</span></a>
+    </div>
+    <div class="col-3">  
+        <a class="nav-link active" aria-current="page" href="/my-journal"><span><img src="/static/images/read.png" alt="book img" width=40px height=40px>Journal</span></a> 
+    </div>
+    <div class="col-4">  
+        <a class="nav-link active" aria-current="page" href="/community"><span><img src="/static/images/community.png" alt="pen img" width=40px height=40px></span>Community</a>
+        <!-- <a class="nav-link active" aria-current="page" href="/friends"><span><img src="/static/images/friends.png" alt="friends img" width=40px height=40px></span>Connections</a> -->
+    </div>
+    <div class="col-1 text-right">  
+        <a class="nav-link active" aria-current="page" href="/logout">Logout</a>
+    </div>
 {% endblock %}
 
 {% block title %} {{user.fname}}'s Entries {% endblock %}
