--- a/templates/base.html
+++ b/templates/base.html
@@ -1,5 +1,6 @@
 <!doctype html>
-<html lang="en" style="background-image: url(/static/images/desert.png)">
+<!-- <html lang="en" style="background-image: url(/static/images/desert.png)"> -->
+<html lang="en">
     <head>
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -15,8 +16,9 @@
        
     </head>
 
-
+{% block body %}
     <body>
+{% endblock %}
         <nav class="navbar">
             <div class="container-fluid">
                 <div class="row">
