--- a/templates/shared-user-page.html
+++ b/templates/shared-user-page.html
@@ -2,6 +2,11 @@
 
 {% block title %} {{user.fname}}'s Journal Entries {% endblock %}
 
+{% block body %}
+    <body style="background-color: #FFF5EE">
+{% endblock %}
+
+
 {% block nav %}
     <div class="col-4">  
         <a class="nav-link active" aria-current="page" href="/entry"><span><img src="/static/images/pen.png" alt="pen img" width=40px height=40px>My Entries</span></a>
