--- a/templates/user-page.html
+++ b/templates/user-page.html
@@ -18,6 +18,10 @@
 
 {% block title %} {{user.fname}}'s Entries {% endblock %}
 
+{% block body %}
+    <body style="background-color: #FFF5EE">
+{% endblock %}
+
 {% block content %} 
 <div class="container"></div> 
 
