--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -17,7 +17,7 @@
 </head>
 
 
-<body>
+<body> 
 
   <!-- Button trigger modal Create User -->
   <div id="home_button_bar" class="row">
@@ -44,13 +44,13 @@
       {% endfor %}
     </div>
   </div>
-
-  <div id="home_img_block" class="row" style="background-color: black">
+  <div id="home_img_block" class="row" style="background-color: black"> 
     <div class="col-10">
-      <div id="home_img" class="bg-image" style="background-image: url('/static/images/rupi.png')" ></div>
-        <h1 id="login_title_1">Growth Mindset</h1>
+      <img id="home_img" class="bg-image" src='/static/images/mind.png' >
+      <div class="centered">
+        <h1 id="login_title_1">Mindful Growth</h1>
         <h2 id="login_title"></h2>
-      </div>
+       </div>
     </div>
   </div>
 
