--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -17,7 +17,7 @@
 </head>
 
 
-<body> 
+<body style="background-color: black">
 
   <!-- Button trigger modal Create User -->
   <div id="home_button_bar" class="row">
