community page working

--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -46,6 +46,9 @@
   </div>
   <div id="home_img_block" class="row" style="background-color: black"> 
     <div class="col-10">
+      <!-- <video autoplay loop id="myVideo">
+        <source src="tree.mp4" type="video/mp4">
+      </video> -->
       <img id="home_img" class="bg-image" src='/static/images/mind.png' >
       <div class="centered">
         <h1 id="login_title_1">Mindful Growth</h1>
