! gone per Kelli's request

--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -62,7 +62,7 @@
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-header">
-        <h5 class="modal-title" id="exampleModalLabel">Create New User Account</h5>
+        <h5 class="modal-title" id="exampleModalLabel">Create New Account</h5>
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
       <div class="modal-body">
@@ -101,7 +101,7 @@
                 <button type="button" data-bs-dismiss="modal" class="btn btn-secondary" id="close_button">Close</button>
               </div>
               <div class="col-1 col-sm-6">
-                <button type="submit" data-bs-dismiss="modal" class="btn btn-primary" id="homepage_button">Create User!</button>
+                <button type="submit" data-bs-dismiss="modal" class="btn btn-primary" id="homepage_button">Create Account</button>
               </div>  
             </div>
           </form>
@@ -134,7 +134,7 @@
               <button type="button" data-bs-dismiss="modal" class="btn btn-secondary" id="close_button">Close</button>
             </div>
             <div class="col-1 col-sm-6">
-              <button type="submit" data-bs-dismiss="modal" class="btn btn-primary" id="homepage_button">Log In!</button>
+              <button type="submit" data-bs-dismiss="modal" class="btn btn-primary" id="homepage_button">Log In</button>
             </div>  
           </div>
         </form>
