cleaned up and organized code

--- a/templates/community.html
+++ b/templates/community.html
@@ -3,7 +3,7 @@
 {% block title %} Journal Community {% endblock %}
 
 {% block body %}
-    <body style="background-color: #FFF5EE">
+    <body id="community_body">
 {% endblock %}
 
 {% block nav %}
@@ -15,7 +15,6 @@
     </div>
     <div class="col-4">  
         <a class="nav-link active" aria-current="page" href="/community"><span style="color: maroon"><img src="/static/images/community.png" alt="pen img" width=40px height=40px>Community</span></a>
-        <!-- <a class="nav-link active" aria-current="page" href="/friends"><span><img src="/static/images/friends.png" alt="friends img" width=40px height=40px></span>Connections</a> -->
     </div>
     <div class="col-1 text-right">  
         <a class="nav-link active" aria-current="page" href="/logout">Logout</a>
