--- a/static/style.css
+++ b/static/style.css
@@ -1,7 +1,3 @@
-/* html {
-    background-color: black;
-} */
-
 /* Navbar CSS */
 
 /* #navbar_supported_content { 
@@ -26,21 +22,17 @@
   font-size: 20pt;
   margin-bottom: 25px;
 }
+
+
+/* Homepage CSS */
+
+#homepage_body {
+  background-color: black;
+}
+
 #home_button_bar {
   background-color: black;
 }
-  /* img CSS */
-
-#icon_calendar {
-  width: 70px;
-  height: 70px;
-  justify-content: center;
-}
-
-icon {
-  width: 70px;
-  height: 80px;;
-} 
 
 #home_img{
   width: 50%; 
@@ -51,15 +43,67 @@ icon {
   
 }
 
-/* #mountain {
-    height: 400px;
-    width: 75%;
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    margin-bottom: 2em;
-    box-shadow: 10px 10px 10px 15px navy;
-   } */
+.flash-msg {
+  position: absolute;
+  top: 5%;
+  font-size: 15pt;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  font-family: 'Fredericka the Great', cursive;
+  color: #FFF5EE; 
+  font-size: 20pt;
+}
+
+#login_title, #login_title_1 {
+  font-family: 'Fredericka the Great', cursive;
+  color: #FFF5EE;
+}
+
+.modal-content{
+  background-color: white;
+  border: none;
+  color: black;
+  font-family: marker felt, fantasy;
+}
+
+#homepage_button, #close_button {
+  background-color: black;
+  border: none;
+  color: white;
+  font-family: marker felt, fantasy;
+}
+
+#myVideo {
+  position: fixed;
+  right: 0;
+  bottom: 0;
+  min-width: 100%;
+  min-height: 100%;
+}
+
+.background-video video {
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: -1;
+}
+
+/* Community page CSS */
+#community_body {
+  background-color: #FFF5EE;
+}
+
+#radio_container {
+  color: black;
+}
+
+#display_entry_text, #link_to_author_user_page {
+  white-space: pre-line; 
+  text-align: left;
+  padding-left: 15px; 
+}
+
+
 
 /* text CSS */
 
@@ -73,15 +117,6 @@ icon {
 #entry {
   background-color: #FFF5EE;
 }
-.flash-msg {
-  position: absolute;
-  top: 5%;
-  font-size: 15pt;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  font-family: 'Fredericka the Great', cursive;
-  color: #FFF5EE;
-}
 
 h1, h2, p, #entry {
   color: black;
@@ -93,11 +128,6 @@ h1, h2, p, #entry {
 textarea {
   margin-bottom: 25px;
   background-color: white;
-}
-
-#login_title, #login_title_1 {
-font-family: 'Fredericka the Great', cursive;
-color: #FFF5EE;
 }
 
 form, h3, #journal_entry {
@@ -116,14 +146,10 @@ form, h3, #journal_entry {
   width: 800px;
   height: 400px;
   overflow-y: scroll;
-
 }
 
-#display_entry_text, #link_to_author_user_page {
-  white-space: pre-line; 
-  text-align: left;
-  padding-left: 15px; 
-}
+
+/* My Journal CSS*/
 
 #entry_visibility {
   background-color: #FFF5EE;
@@ -134,8 +160,6 @@ form, h3, #journal_entry {
   margin-bottom: 30px;
 }
 
-/* button CSS */
-
 #source_button{
   background-color: #FFF5EE;
   border: none;
@@ -144,18 +168,6 @@ form, h3, #journal_entry {
   font-family: marker felt, fantasy;
 }
 
-.modal-content{
-  background-color: white;
-  border: none;
-  color: black;
-  font-family: marker felt, fantasy;
-}
-#homepage_button, #close_button {
-  background-color: black;
-  border: none;
-  color: white;
-  font-family: marker felt, fantasy;
-}
 #bonus_text_button {
     background-color: #FFF5EE;
     border: none;
@@ -165,15 +177,18 @@ form, h3, #journal_entry {
     font-family: marker felt, fantasy;
 }
 
-#follow_button {
-  font-size: 14pt;
-}
 button {
   background-color: #FFF5EE;
   border: none;
   font-weight: bold;
   color: maroon;
   font-family: marker felt, fantasy;
+}
+
+/* shared-user page CSS */
+
+#follow_button {
+  font-size: 14pt;
 }
 
 /* collasible button CSS */
@@ -187,21 +202,26 @@ button {
     text-align: left;
     outline: none;
     font-size: 15px;
-  }
-  
-  .content {
-    padding: 0 18px;
-    display: none;
-    overflow: scroll;
-    background-color: #FFF5EE;
-    margin-top: 10px;
-    margin-bottom: 10px;
-  }
-
-  #myVideo {
-  position: fixed;
-  right: 0;
-  bottom: 0;
-  min-width: 100%;
-  min-height: 100%;
 }
+  
+.content {
+  padding: 0 18px;
+  display: none;
+  overflow: scroll;
+  background-color: #FFF5EE;
+  margin-top: 10px;
+  margin-bottom: 10px;
+}
+
+/* misc img CSS */
+
+#icon_calendar {
+  width: 70px;
+  height: 70px;
+  justify-content: center;
+}
+
+icon {
+  width: 70px;
+  height: 80px;;
+} 
