--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -5,6 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>{%block title%}52 Weeks Journal{% endblock %}</title>
+  <link rel="icon" type="image/x-icon" href="/static/images/journal_icon.png">
         <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
         <!-- JavaScript Bundle with Popper -->
@@ -14,12 +15,38 @@
   <style>
     @import url('https://fonts.googleapis.com/css2?family=Fredericka+the+Great&display=swap');
   </style>
+
+
+
 </head>
 
 
-<body style="background-color: black">
+<body id="homepage_body">
 
-  <!-- Button trigger modal Create User -->
+  <div class="container-fluid">
+    <div class="row">
+      {% for msg in get_flashed_messages() %}
+        <p class="flash-msg">
+            {{ msg }}
+        </p>
+      {% endfor %}
+    </div>
+  </div>
+  
+  <div class="background-video"></div>
+    <video width height="637" autoplay muted>
+      <source src="/static/images/tree_2.mp4" type="video/mp4">
+    </video>
+  </div>
+      <!-- <img id="home_img" class="bg-image" src='/static/images/mind.png' > -->
+  <div class="centered">
+    <h1 id="login_title_1">Mindful Growth</h1>
+    <h2 id="login_title"></h2>
+  </div>
+      
+   
+<div class="container-fluid"></div>
+<!-- Button trigger modal Create User -->
   <div id="home_button_bar" class="row">
     <div class="col-2 offset-8">
       <button type="button" class="btn btn-dark" data-bs-toggle="modal" data-bs-target="#create-user">
@@ -34,28 +61,7 @@
       </button>
     </div>
   </div>
-
-  <div class="container-fluid">
-    <div class="row" style="background-color: black; font-size: 20pt; font-family: 'Fredericka';">
-      {% for msg in get_flashed_messages() %}
-        <p class="flash-msg">
-            {{ msg }}
-        </p>
-      {% endfor %}
-    </div>
-  </div>
-  <div id="home_img_block" class="row" style="background-color: black"> 
-    <div class="col-10">
-      <video width="320" height="300" id="myVideo" controls autoplay muted >
-        <source src="/static/images/tree_2.mp4" type="video/mp4">
-      </video>
-      <!-- <img id="home_img" class="bg-image" src='/static/images/mind.png' > -->
-      <div class="centered">
-        <h1 id="login_title_1">Mindful Growth</h1>
-        <h2 id="login_title"></h2>
-       </div>
-    </div>
-  </div>
+</div>
 
  <!-- Modal Create User -->
 <div class="modal fade" id="create-user" tabindex="-1" aria-labelledby="Create New Account" aria-hidden="true">
@@ -144,58 +150,6 @@
 </div> 
 
 
-<!-- <form action="/users" method="POST">
-  <div>
-    <label for="user_id">Email:</label>
-    <input type="text" name="email"/>
-  </div>
-  <div>
-    <label for="user_password">Password:</label>
-    <input type="password" name="password"/>
-  </div>
-  <div>
-    <label for="fname">First Name:</label>
-    <input type="text" name="fname"/>
-  </div>
-  <div>
-    <label for="lname">Last Name:</label>
-    <input type="text" name="lname"/>
-  </div>
-  <div>
-    Would you like to be alerted via email when a new entry is released?
-  
-    <input type="radio" name="twilio_alert" value="Yes" id="yes_twilio">
-    <label for="yes_twilio">Yes</label>
-  
-    <input type="radio" name="twilio_alert" value="No" id="no_twilio">
-    <label for="no_twilio">No</label>
-  </form>
-  <div>
-    <button id="homepage_button" type="submit">Create User!</button>
-  </div>
-  <div>
-  
-  </div>
-</form> -->
-
-
-<!-- <h3><u>Log In</u></h3>
-<form action="/login" method="POST">
-  <div>
-    <label for="user_id">Email:</label>
-    <input type="text" name="email" id="user_id" required />
-  </div>
-  <div>
-    <label for="user_password">Password:</label>
-    <input type="password" name="password" id="user_password" required />
-  </div>
-  <div>
-    <button id="homepage_button" type="submit">Log In!</button>
- </div>
-</form> -->
-
-
-  <!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script> -->
   <script src='/static/js/homepage.js'></script>
 </body>
 </html>
