--- a/templates/community.html
+++ b/templates/community.html
@@ -23,7 +23,7 @@
 
 {% block content %}   
 <div class="fluid-container">
-<div class="row" style="color: black" id="radio-container">
+<div class="row" id="radio-container">
     <div class="col-3 offset-2">
         <p> Community View:</p>
     </div>
