--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -39,10 +39,16 @@
     </video>
   </div>
       <!-- <img id="home_img" class="bg-image" src='/static/images/mind.png' > -->
-  <div class="centered">
-    <h1 id="login_title_1">Mindful Growth</h1>
-    <h2 id="login_title"></h2>
-  </div>
+<header class="container-fluid d-flex justify-content-center align-items-center
+  text-light">
+<div class="row">
+<div class="col">
+  <h1 id="login_title_1">Mindful Growth</h1>
+  <h2 id="login_title"></h2>
+</div>
+</div>
+</header>
+
       
    
 <div class="container-fluid"></div>
