--- a/templates/user-page.html
+++ b/templates/user-page.html
@@ -9,7 +9,6 @@
     </div>
     <div class="col-4">  
         <a class="nav-link active" aria-current="page" href="/community"><span><img src="/static/images/community.png" alt="pen img" width=40px height=40px></span>Community</a>
-        <!-- <a class="nav-link active" aria-current="page" href="/friends"><span><img src="/static/images/friends.png" alt="friends img" width=40px height=40px></span>Connections</a> -->
     </div>
     <div class="col-1 text-right">  
         <a class="nav-link active" aria-current="page" href="/logout">Logout</a>
@@ -19,16 +18,14 @@
 {% block title %} {{user.fname}}'s Entries {% endblock %}
 
 {% block body %}
-    <body style="background-color: #FFF5EE">
+    <body id="user_page_body">
 {% endblock %}
 
 {% block content %} 
-<div class="container"></div> 
 
-<div class="row">
     <div id="user-prompts" class="col"></div>
-
-<script src='/static/js/user-page.js'></script>
+        
+    <script src='/static/js/user-page.js'></script>
 {% endblock %}
 
 {% block footer %}
