--- a/templates/base.html
+++ b/templates/base.html
@@ -18,7 +18,7 @@
 {% block body %}
     <body>
 {% endblock %}
-        <nav class="navbar">
+        <nav class="navbar sticky-top">
             <div class="container-fluid">
                 <div class="row">
                     {% block nav %}
