--- a/templates/community.html
+++ b/templates/community.html
@@ -14,7 +14,7 @@
         <a class="nav-link active" aria-current="page" href="/my-journal"><span><img src="/static/images/read.png" alt="book img" width=40px height=40px>Journal</span></a> 
     </div>
     <div class="col-4">  
-        <a class="nav-link active" aria-current="page" href="/community"><span style="color: maroon"><img src="/static/images/community.png" alt="pen img" width=40px height=40px>Community</span></a>
+        <a class="nav-link active" aria-current="page" href="/community"><span style="color: rgb(101, 157, 101)"><img src="/static/images/community.png" alt="pen img" width=40px height=40px>Community</span></a>
     </div>
     <div class="col-1 text-right">  
         <a class="nav-link active" aria-current="page" href="/logout">Logout</a>
@@ -38,13 +38,14 @@
 </div>
 </div>
 
-<div class="row">
-    <div id="shared-entries" class="col"></div>
-
+<div class="container fluid">
+    <div class="row">
+        <div id="shared-entries" class="col"></div>
+    </div>
+</div>
 
 <script src='/static/js/community.js'></script>
 {% endblock %}
-
 
 {% block footer %}
 
