--- a/templates/user-page.html
+++ b/templates/user-page.html
@@ -23,7 +23,11 @@
 
 {% block content %} 
 
-    <div id="user-prompts" class="col"></div>
+    <div class="container-fluid">
+        <div class="row">
+            <div id="user-prompts" class="col"></div>
+        </div>
+    </div>
         
     <script src='/static/js/user-page.js'></script>
 {% endblock %}
